curator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: curator
  labels:
    name: curator
