curator/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meilisearch
  namespace: curator
  labels:
    app: meilisearch
    app.kubernetes.io/instance: meilisearch
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: meilisearch
    app.kubernetes.io/part-of: meilisearch
    helm.sh/chart: meilisearch-0.4.3
  annotations:
    meta.helm.sh/release-name: meilisearch
    meta.helm.sh/release-namespace: curator
spec:
  selector:
    istio: ingressgateway # Use Istio's default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "search.curator.atemkeng.eu"
